<resources>
    <string name="app_name">TestDemo</string>
    <string name="action_settings">Settings</string>

    <string name="loading_prompt">请稍后...</string>
    <string name="tip_param_error">参数错误，无法打开页面</string>
    <string name="reminder">温馨提示</string>
    <string name="no_net_temp">您现在没有网络连接</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <!-- pulltorefresh -->

    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">释放即可刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新…</string>
    <string name="pull_to_refresh_last_loadtime">上次更新时间：</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="home">home</string>
    <string name="bar_biz">biz</string>
    <string name="bar_bbs">bbs</string>
    <string name="bar_article">article</string>
    <string name="more">more</string>
    <string name="turn_on_flashlight">Turn On Flashlight</string>
    <string name="turn_off_flashlight">Turn Off Flashlight</string>
</resources>
